sdk/include/ml.h


typedef enum {
    ML_SUCCESS = 0, 
    ML_ERROR_COMMON_UNKNOWN           = -100000, 
    ML_ERROR_COMMON_INVALID_INPUT     = -100001, 
    ML_ERROR_COMMON_MEMORY_ALLOCATION = -100003, 
    ML_ERROR_COMMON_FILE_NOT_FOUND    = -100004, 
    ML_ERROR_COMMON_NOT_INITIALIZED   = -100007, 
    ML_ERROR_COMMON_NOT_SUPPORTED     = -100013, 
    ML_ERROR_COMMON_MODEL_LOAD    = -100201, 
    ML_ERROR_COMMON_MODEL_INVALID = -100203, 
    ML_ERROR_COMMON_PLUGIN_LOAD    = -100301, 
    ML_ERROR_COMMON_PLUGIN_INVALID = -100302, 
    ML_ERROR_COMMON_LICENSE_INVALID = -100601, 
    ML_ERROR_COMMON_LICENSE_EXPIRED = -100602, 
    ML_ERROR_LLM_TOKENIZATION_FAILED         = -200001, 
    ML_ERROR_LLM_TOKENIZATION_CONTEXT_LENGTH = -200004, 
    ML_ERROR_LLM_GENERATION_FAILED          = -200101, 
    ML_ERROR_LLM_GENERATION_PROMPT_TOO_LONG = -200103, 
    ML_ERROR_VLM_IMAGE_LOAD   = -201001, 
    ML_ERROR_VLM_IMAGE_FORMAT = -201002, 
    ML_ERROR_VLM_AUDIO_LOAD   = -201101, 
    ML_ERROR_VLM_AUDIO_FORMAT = -201102, 
    ML_ERROR_VLM_GENERATION_FAILED = -201201, 
    ML_ERROR_EMBEDDING_GENERATION = -202301, 
    ML_ERROR_EMBEDDING_DIMENSION  = -202302, 
    ML_ERROR_RERANK_FAILED = -203401, 
    ML_ERROR_RERANK_INPUT  = -203402, 
    ML_ERROR_IMAGEGEN_GENERATION = -204501, 
    ML_ERROR_IMAGEGEN_PROMPT     = -204502, 
    ML_ERROR_IMAGEGEN_DIMENSION  = -204503, 
    ML_ERROR_ASR_TRANSCRIPTION = -205001, 
    ML_ERROR_ASR_AUDIO_FORMAT  = -205002, 
    ML_ERROR_ASR_LANGUAGE      = -205003, 
    ML_ERROR_ASR_STREAM_NOT_STARTED    = -205010, 
    ML_ERROR_ASR_STREAM_ALREADY_ACTIVE = -205011, 
    ML_ERROR_ASR_STREAM_INVALID_AUDIO  = -205012, 
    ML_ERROR_ASR_STREAM_BUFFER_FULL    = -205013, 
    ML_ERROR_ASR_STREAM_CALLBACK_ERROR = -205014, 
    ML_ERROR_TTS_SYNTHESIS    = -206001, 
    ML_ERROR_TTS_VOICE        = -206002, 
    ML_ERROR_TTS_AUDIO_FORMAT = -206003, 
    ML_ERROR_CV_OCR_DETECTION   = -207001, 
    ML_ERROR_CV_OCR_RECOGNITION = -207002, 
    ML_ERROR_CV_OCR_FAILED      = -207003, 
    ML_ERROR_DIARIZE_AUDIO_LOAD   = -208001, 
    ML_ERROR_DIARIZE_SEGMENTATION = -208101, 
    ML_ERROR_DIARIZE_EMBEDDING    = -208102, 
    ML_ERROR_DIARIZE_CLUSTERING   = -208103, 
} ml_ErrorCode;
ML_API const char* ml_get_error_message(const ml_ErrorCode error_code);
typedef const char* ml_PluginId;
typedef const char* ml_Path;
typedef bool (*ml_token_callback)(const char* token, void* user_data);
typedef struct {
    ml_Path path; 
} ml_KvCacheSaveInput;
typedef struct {
    void* reserved; 
} ml_KvCacheSaveOutput;
typedef struct {
    ml_Path path; 
} ml_KvCacheLoadInput;
typedef struct {
    void* reserved; 
} ml_KvCacheLoadOutput;
ML_API int32_t ml_init(void);
ML_API int32_t ml_deinit(void);
ML_API void ml_free(void* ptr);
ML_API const char* ml_version(void);
typedef struct {
    ml_PluginId* plugin_ids;   
    int32_t      plugin_count; 
} ml_GetPluginListOutput;
ML_API int32_t ml_get_plugin_list(ml_GetPluginListOutput* output);
typedef struct {
    ml_PluginId plugin_id; 
} ml_GetDeviceListInput;
typedef struct {
    const char** device_ids;   
    const char** device_names; 
    int32_t      device_count; 
} ml_GetDeviceListOutput;
ML_API int32_t ml_get_device_list(const ml_GetDeviceListInput* input, ml_GetDeviceListOutput* output);
typedef struct {
    int64_t ttft;        
    int64_t prompt_time; 
    int64_t decode_time; 
    int64_t prompt_tokens;    
    int64_t generated_tokens; 
    int64_t audio_duration;   
    double prefill_speed;    
    double decoding_speed;   
    double real_time_factor; 
    const char* stop_reason; 
} ml_ProfileData;
typedef struct {
    int32_t           max_tokens;     
    const char**      stop;           
    int32_t           stop_count;     
    int32_t           n_past;         
    ml_SamplerConfig* sampler_config; 
    ml_Path* image_paths;      
    int32_t  image_count;      
    int32_t  image_max_length; 
    ml_Path* audio_paths;      
    int32_t  audio_count;      
} ml_GenerationConfig;
typedef struct {
    int32_t n_ctx;            
    int32_t n_threads;        
    int32_t n_threads_batch;  
    int32_t n_batch;          
    int32_t n_ubatch;         
    int32_t n_seq_max;        
    int32_t n_gpu_layers;     
    ml_Path     chat_template_path;     
    const char* chat_template_content;  
    const char* system_prompt;          
    bool        enable_sampling;        
    const char* grammar_str;            
    int32_t     max_tokens;             
    bool        enable_thinking;        
    bool        verbose;                
    ml_Path qnn_model_folder_path;  
    ml_Path qnn_lib_folder_path;    
} ml_ModelConfig;
typedef struct ml_LLM ml_LLM; 
typedef struct {
    const char*    model_name;     
    ml_Path        model_path;     
    ml_Path        tokenizer_path; 
    ml_ModelConfig config;         
    ml_PluginId    plugin_id;      
    const char*    device_id;      
    const char*    license_id; 
    const char* license_key;   
} ml_LlmCreateInput;
ML_API int32_t ml_llm_create(const ml_LlmCreateInput* input, ml_LLM** out_handle);
ML_API int32_t ml_llm_destroy(ml_LLM* handle);
ML_API int32_t ml_llm_reset(ml_LLM* handle);
ML_API int32_t ml_llm_save_kv_cache(ml_LLM* handle, const ml_KvCacheSaveInput* input, ml_KvCacheSaveOutput* output);
ML_API int32_t ml_llm_load_kv_cache(ml_LLM* handle, const ml_KvCacheLoadInput* input, ml_KvCacheLoadOutput* output);
typedef struct {
    const char* role;    
    const char* content; 
} ml_LlmChatMessage;
typedef struct {
    ml_LlmChatMessage* messages;              
    int32_t            message_count;         
    const char*        tools;                 
    bool               enable_thinking;       
    bool               add_generation_prompt; 
} ml_LlmApplyChatTemplateInput;
typedef struct {
    char* formatted_text; 
} ml_LlmApplyChatTemplateOutput;
ML_API int32_t ml_llm_apply_chat_template(
    ml_LLM* handle, const ml_LlmApplyChatTemplateInput* input, ml_LlmApplyChatTemplateOutput* output);
typedef struct {
    const char* prompt_utf8; 
    const ml_GenerationConfig* config;          
    ml_token_callback          on_token;        
    void*                      user_data;       
    const int32_t*             input_ids;       
    int32_t                    input_ids_count; 
} ml_LlmGenerateInput;
typedef struct {
    char*          full_text;    
    ml_ProfileData profile_data; 
} ml_LlmGenerateOutput;
ML_API int32_t ml_llm_generate(ml_LLM* handle, const ml_LlmGenerateInput* input, ml_LlmGenerateOutput* output);
typedef struct {
    const char*    role;           
    ml_VlmContent* contents;       
    int64_t        content_count;  
} ml_VlmChatMessage;
typedef struct ml_VLM ml_VLM; 
typedef struct {
    const char*    model_name;     
    ml_Path        model_path;     
    ml_Path        mmproj_path;    
    ml_ModelConfig config;         
    ml_PluginId    plugin_id;      
    const char*    device_id;      
    ml_Path        tokenizer_path; 
    const char*    license_id; 
    const char* license_key;   
} ml_VlmCreateInput;
ML_API int32_t ml_vlm_create(const ml_VlmCreateInput* input, ml_VLM** out_handle);
ML_API int32_t ml_vlm_destroy(ml_VLM* handle);
ML_API int32_t ml_vlm_reset(ml_VLM* handle);
typedef struct {
    ml_VlmChatMessage* messages;        
    int32_t            message_count;   
    const char*        tools;           
    bool               enable_thinking; 
    bool grounding; 
} ml_VlmApplyChatTemplateInput;
typedef struct {
    char* formatted_text; 
} ml_VlmApplyChatTemplateOutput;
ML_API int32_t ml_vlm_apply_chat_template(
    ml_VLM* handle, const ml_VlmApplyChatTemplateInput* input, ml_VlmApplyChatTemplateOutput* output);
typedef struct {
    const char*                prompt_utf8; 
    const ml_GenerationConfig* config;      
    ml_token_callback          on_token;    
    void*                      user_data;   
} ml_VlmGenerateInput;
typedef struct {
    char*          full_text;    
    ml_ProfileData profile_data; 
} ml_VlmGenerateOutput;
ML_API int32_t ml_vlm_generate(ml_VLM* handle, const ml_VlmGenerateInput* input, ml_VlmGenerateOutput* output);